[package]
name = "accounts"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
near-crypto = "0.20.0"
near-primitives = "0.20.0"
providers = {path ="../providers"}
transactions = {path ="../transactions"}

