[package]
name = "near-accounts"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
near-crypto = "0.20.0"
near-primitives = "0.20.1"
near-providers = {path ="../near-providers"}
near-transactions = {path ="../near-transactions"}
near-jsonrpc-primitives = "0.20.1"
near-jsonrpc-client = "0.8.0"
tokio = { version = "1", features = ["full"] }
serde_json = "1.0.85"
num-bigint = "0.4"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
env_logger = "0.10.0"
reqwest = { version = "0.11.12", features = ["json"], default-features = false }

