[package]
name = "near-accounts"
version = "0.1.0-alpha"
edition = "2021"
description = "Simplify interaction with NEAR Protocol accounts. High-level abstractions for managing accounts, deploying contracts, and executing transactions on the NEAR blockchain."
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
near-crypto = "0.20.1"
near-primitives = "0.20.1"
near-providers = {path ="../near-providers", version = "0.1.0-alpha"}
near-transactions = {path = "../near-transactions", version = "0.1.0-alpha"}
tokio = { version = "1", features = ["full"] }
serde_json = "1.0.85"
num-bigint = "0.4"
serde = "1.0.197"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
env_logger = "0.11.3"
reqwest = { version = "0.12.3", features = ["json"], default-features = false }

