[package]
name = "near-api-lib"
version = "0.1.0-alpha"
edition = "2021"
description = "A Rust library for seamless NEAR blockchain development, offering tools for account management, transaction operations, and blockchain queries."
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
near-accounts = {path ="../near-accounts",  version = "0.1.0-alpha"}
near-providers = {path ="../near-providers", version = "0.1.0-alpha"}

near-crypto = "0.21.1"
near-primitives = "0.21.1"

tokio = { version = "1", features = ["full"] }
serde_json = "1.0.85"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
env_logger = "0.11.3"
