[package]
name = "near-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
near-accounts = {path ="../near-accounts"}
near-providers = {path ="../near-providers"}
near-crypto = "0.20.0"
near-primitives = "0.20.1"
tokio = { version = "1", features = ["full"] }
serde_json = "1.0.85"
env_logger = "0.10.0"
