[package]
name = "near-providers"
version = "0.1.0-alpha"
edition = "2021"
description = "High-level abstractions for interacting with the NEAR blockchain, simplifying JSON RPC calls."
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
near-jsonrpc-client = "0.8.0"
near-primitives = "0.20.1"
near-jsonrpc-primitives = "0.20.1"
async-trait = "0.1.50"
serde_json = "1.0.85"
near-crypto = "0.20.1"
near-chain-configs = "0.20.0"


[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
env_logger = "0.10.0"
reqwest = { version = "0.11.12", features = ["json"], default-features = false }

