[package]
name = "near-providers"
version = "0.1.0-alpha"
edition = "2021"
description = "High-level abstractions for interacting with the NEAR blockchain, simplifying JSON RPC calls."
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
async-trait = "0.1.50"
serde_json = "1.0.85"

near-jsonrpc-client = "0.9.0"
near-crypto = "0.21.1"
near-primitives = "0.21.1"
near-chain-configs = "0.21.1"
near-jsonrpc-primitives = "0.21.1"
reqwest = "0.12.3"
serde = "1.0.197"
serde_with = "3.8.1"
url = "2.2" 

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
env_logger = "0.11.3"
reqwest = { version = "0.12.3", features = ["json"], default-features = false }

