[package]
name = "near-transactions"
version = "0.1.0-alpha"
edition = "2021"
description = "High-level abstractions to facilitate the creation, manipulation, and signing of transactions on the NEAR blockchain."
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
near-primitives = "0.20.1"
near-crypto = "0.20.1"
