[package]
name = "providers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
near-jsonrpc-client = "0.8.0"
near-primitives = "0.20.0"
near-jsonrpc-primitives = "0.20.0"
async-trait = "0.1.50"
serde_json = "1.0.85"
near-crypto = "0.20.0"



[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
env_logger = "0.10.0"
reqwest = { version = "0.11.12", features = ["json"], default-features = false }

